tests/bad/assert.rat
/// fail: Assertion failed

assert 1 == 2
